# queue-sheet-haskell

./: .travis.yml  CHANGELOG.md  Makefile  README.md  cabal-8.10.7.project  cabal-8.2.2.project  cabal-8.4.4.project  cabal-8.6.5.project  cabal-8.8.4.project  cabal-9.0.2.project  cabal-9.2.5.project  cabal-9.2.8.project  cabal-9.4.2.project  cabal-9.4.5.project  cabal-9.4.7.project  cabal-bounds-lower.project  cabal-bounds-upper.project  cabal.project  default.nix  queue-sheet.cabal  queue-sheet.hs  queue-sheet.nix  shell.nix  stack-8.10.2.yaml  stack-8.10.4.yaml  stack-8.10.7.yaml  stack-8.2.2.yaml  stack-8.4.4.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml  stack-9.0.1.yaml  stack-9.0.2.yaml  stack-9.10.1.yaml  stack-9.2.1.yaml  stack-9.2.2.yaml  stack-9.2.3.yaml  stack-9.2.4.yaml  stack-9.2.5.yaml  stack-9.2.8.yaml  stack-9.4.2.yaml  (+13 more)
.github/workflows/: ci.yml
app/: queue-sheet.hs
doc/: queue-sheet.1  queue-sheet.1.md
example/: podcasts.yaml  sections.yaml  template.tex
examples/: conference-videos.yaml  haskell-love-2020.yaml  podcasts.yaml  template.tex  zurihac-2020.yaml
pkg/deb/: Makefile  copyright
pkg/rpm/: queue-sheet-haskell.spec
project/: TODO.md
project/log/: 20200122-design.md  20200822-design.md
project/release/: queue-sheet-haskell-0.0.1.0.md  queue-sheet-haskell-0.1.0.0.md  queue-sheet-haskell-0.2.0.0.md  queue-sheet-haskell-0.3.0.0.md  queue-sheet-haskell-0.4.0.0.md  queue-sheet-haskell-0.5.0.0.md  queue-sheet-haskell-0.5.0.1.md  queue-sheet-haskell-0.6.0.0.md  queue-sheet-haskell-0.7.0.0.md  queue-sheet-haskell-0.7.0.1.md  queue-sheet-haskell-0.7.0.2.md  queue-sheet-haskell-0.8.0.0.md  queue-sheet-haskell-0.8.0.1.md
src/: QueueSheet.hs
src/QueueSheet/: Build.hs  File.hs  Template.hs  Types.hs
test/: Spec.hs
test/QueueSheet/File/: Test.hs
