name:           queue-sheet
version:        0.0.1.0
category:       Utils
synopsis:       queue sheet utility
description:
  This package provides a utility for creating queue sheets.  Please see the
  README on GitHub at
  <https://github.com/ExtremaIS/queue-sheet-haskell#readme>.

homepage:       https://github.com/ExtremaIS/queue-sheet-haskell#readme
bug-reports:    https://github.com/ExtremaIS/queue-sheet-haskell/issues
author:         Travis Cardwell <travis.cardwell@extrema.is>
maintainer:     Travis Cardwell <travis.cardwell@extrema.is>
copyright:      Copyright (c) 2020 Travis Cardwell
license:        MIT
license-file:   LICENSE

cabal-version:  >=1.10
build-type:     Simple
tested-with:
  GHC ==8.2.2
   || ==8.4.4
   || ==8.6.5

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/ExtremaIS/queue-sheet-haskell.git

executable queue-sheet
  main-is: queue-sheet.hs
  other-modules:
      LibOA
    , Paths_queue_sheet
  build-depends:
      aeson
    , ansi-wl-pprint >=0.6 && <0.7
    , base >=4.7 && <5
    , directory
    , filepath
    , ginger
    , optparse-applicative >=0.14 && <0.16
    , process
    , scientific
    , text
    , transformers
    , ttc
    , yaml
  default-language: Haskell2010
  ghc-options: -Wall

test-suite queue-sheet-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base
  default-language: Haskell2010
  ghc-options: -Wall
