name:           queue-sheet
version:        0.7.0.0
category:       Utils
synopsis:       queue sheet utility
description:
  This package provides a utility for creating queue sheets.  Please see the
  README on GitHub at
  <https://github.com/ExtremaIS/queue-sheet-haskell#readme>.

homepage:       https://github.com/ExtremaIS/queue-sheet-haskell#readme
bug-reports:    https://github.com/ExtremaIS/queue-sheet-haskell/issues
author:         Travis Cardwell <travis.cardwell@extrema.is>
maintainer:     Travis Cardwell <travis.cardwell@extrema.is>
copyright:      Copyright (c) 2020-2021 Travis Cardwell
license:        MIT
license-file:   LICENSE

cabal-version:  1.24
build-type:     Simple
tested-with:
  GHC ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/ExtremaIS/queue-sheet-haskell.git

flag write-hie
  description: write .hie files
  default: False

library
  hs-source-dirs: src
  exposed-modules:
      QueueSheet
    , QueueSheet.Build
    , QueueSheet.File
    , QueueSheet.Template
    , QueueSheet.Types
  other-modules:
      Paths_queue_sheet
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , directory
    , filepath
    , ginger
    , process
    , scientific
    , text
    , transformers
    , ttc
    , vector
    , yaml
  default-language: Haskell2010
  if flag(write-hie)
    ghc-options: -Wall -fwrite-ide-info -hiedir=.hie
  else
    ghc-options: -Wall

executable queue-sheet
  hs-source-dirs: app
  main-is: queue-sheet.hs
  other-modules:
      LibOA
  build-depends:
      ansi-wl-pprint >=0.6 && <0.7
    , base >=4.7 && <5
    , optparse-applicative >=0.14 && <0.17
    , queue-sheet
  default-language: Haskell2010
  ghc-options: -Wall

test-suite queue-sheet-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      QueueSheet.File.Test
  build-depends:
      base
    , bytestring
    , queue-sheet
    , tasty
    , tasty-hunit
  default-language: Haskell2010
  ghc-options: -Wall
