name:           queue-sheet
version:        0.7.0.2
category:       Utils
synopsis:       queue sheet utility
description:
  This package provides a utility for creating queue sheets.  Please see the
  README on GitHub at
  <https://github.com/ExtremaIS/queue-sheet-haskell#readme>.

homepage:       https://github.com/ExtremaIS/queue-sheet-haskell#readme
bug-reports:    https://github.com/ExtremaIS/queue-sheet-haskell/issues
author:         Travis Cardwell <travis.cardwell@extrema.is>
maintainer:     Travis Cardwell <travis.cardwell@extrema.is>
copyright:      Copyright (c) 2020-2024 Travis Cardwell
license:        MIT
license-file:   LICENSE

cabal-version:  1.24
build-type:     Simple
tested-with:
  GHC ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.4

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/ExtremaIS/queue-sheet-haskell.git

-- This flag is referenced in the Stack build-constraints.yaml configuration.
flag optparse-applicative_ge_0_18
  description: Use optparse-applicative 0.18 or newer
  default: False
  manual: False

library
  hs-source-dirs: src
  exposed-modules:
      QueueSheet
    , QueueSheet.Build
    , QueueSheet.File
    , QueueSheet.Template
    , QueueSheet.Types
  other-modules:
      Paths_queue_sheet
  build-depends:
      aeson >= 1.2.4 && <2.3
    , base >=4.10.1 && <4.19
    , bytestring >=0.10.8.2 && <0.12
    , directory >=1.3.0.2 && <1.4
    , filepath >=1.4.1.2 && <1.5
    , ginger >=0.8.4 && <0.11
    , process >=1.6.1 && <1.7
    , scientific >=0.3.6.2 && <0.4
    , text >=1.2.3 && <2.1
    , transformers >=0.5.2 && <0.7
    , ttc >=1.1 && <1.5
    , vector >=0.12.0.1 && <0.14
    , yaml >=0.8.32 && <0.12
  default-language: Haskell2010
  ghc-options: -Wall

executable queue-sheet
  hs-source-dirs: app
  main-is: queue-sheet.hs
  other-modules:
      LibOA
  build-depends:
      base
    , queue-sheet
  if flag(optparse-applicative_ge_0_18)
    build-depends:
        optparse-applicative >=0.18 && <0.19
      , prettyprinter >=1.7.1 && <1.8
  else
    build-depends:
        ansi-wl-pprint >=0.6.8 && <1.1
      , optparse-applicative >=0.13 && <0.18
  default-language: Haskell2010
  ghc-options: -Wall

test-suite queue-sheet-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      QueueSheet.File.Test
  build-depends:
      base
    , bytestring
    , queue-sheet
    , tasty >=1.0.1.1 && <1.6
    , tasty-hunit >=0.10.0.1 && <0.11
  default-language: Haskell2010
  ghc-options: -Wall
